--- a/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
+++ b/app/src/main/res/layout/free_parenting_baby_edit_profile_fragment.xml
@@ -1,12 +1,294 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.uptodd.uptoddapp.ui.freeparenting.profile.childprofile.EditProfileFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include
+                android:id="@+id/toolbar_nav"
+                layout="@layout/free_parenting_toolbar_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways" />
+
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/profile_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="#fefffe"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#fefffe"
+                    android:padding="10dp">
+
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/user_profile_pic"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="15dp"
+                        app:cardBackgroundColor="@color/gradientCarouselIndicatorStartColor"
+                        app:cardCornerRadius="360dp"
+                        app:cardElevation="14dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <TextView
+                            android:id="@+id/user_profile_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:fontFamily="@font/montserrat"
+                            android:gravity="center_vertical|center"
+                            android:text="A"
+                            android:textColor="@color/white"
+                            android:textSize="50sp"
+                            android:textStyle="bold"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <!--<ImageView
+                        android:id="@+id/user_profile_pic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:src="@drawable/samplebaby" />-->
+
+
+                    <TextView
+                        android:id="@+id/user_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/montserrat"
+                        android:text="testing image"
+                        android:textColor="#595958"
+                        android:textSize="17sp"
+                        android:textStyle="bold"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/user_profile_pic" />
+
+
+                    <TextView
+                        android:id="@+id/user_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="20dp"
+                        android:fontFamily="@font/crimson_text_bold"
+                        android:text="Name"
+                        android:textColor="#595958"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/user_title" />
+
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/user_name_ed2_layout"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="0dp"
+                        android:layout_height="55dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="20dp"
+                        app:boxBackgroundColor="@color/white"
+                        app:boxCornerRadiusBottomEnd="4dp"
+                        app:boxCornerRadiusBottomStart="4dp"
+                        app:boxCornerRadiusTopEnd="4dp"
+                        app:boxCornerRadiusTopStart="4dp"
+                        app:boxStrokeColor="@color/activeBlue"
+                        app:endIconMode="clear_text"
+                        app:endIconTint="@color/black"
+                        app:layout_constraintLeft_toLeftOf="@id/user_name"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/user_name">
+
+                        <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/user_name_ed"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/montserrat"
+                            android:inputType="textPersonName"
+                            android:padding="10dp"
+                            android:singleLine="true"
+                            android:textColor="#595958" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+
+                    <TextView
+                        android:id="@+id/user_email"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/crimson_text_bold"
+                        android:text="Date Of Birth"
+                        android:textColor="#595958"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintLeft_toLeftOf="@id/user_name_ed2_layout"
+                        app:layout_constraintRight_toRightOf="@id/user_name_ed2_layout"
+                        app:layout_constraintTop_toBottomOf="@id/user_name_ed2_layout" />
+
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/dob_ed_layout"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="0dp"
+                        android:layout_height="55dp"
+                        android:layout_marginTop="10dp"
+                        app:boxBackgroundColor="@color/white"
+                        app:boxCornerRadiusBottomEnd="4dp"
+                        app:boxCornerRadiusBottomStart="4dp"
+                        app:boxCornerRadiusTopEnd="4dp"
+                        app:boxCornerRadiusTopStart="4dp"
+                        app:boxStrokeColor="@color/activeBlue"
+                        app:endIconMode="clear_text"
+                        app:endIconTint="@color/black"
+                        app:layout_constraintLeft_toLeftOf="@id/user_email"
+                        app:layout_constraintRight_toRightOf="@id/user_email"
+                        app:layout_constraintTop_toBottomOf="@id/user_email">
+
+                        <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/date_ed"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/montserrat"
+                            android:inputType="date"
+                            android:editable="false"
+                            android:padding="10dp"
+                            android:singleLine="true"
+                            android:textColor="#595958" />
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <TextView
+                        android:id="@+id/user_gender_title"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:fontFamily="@font/montserrat"
+                        android:text="Gender"
+                        android:textColor="#595958"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintLeft_toLeftOf="@id/dob_ed_layout"
+                        app:layout_constraintRight_toRightOf="@id/dob_ed_layout"
+                        app:layout_constraintTop_toBottomOf="@id/dob_ed_layout" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/user_gender_ed_layout"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:hint="Select Gender"
+                        android:textSize="14sp"
+                        app:boxCornerRadiusBottomEnd="4dp"
+                        app:boxCornerRadiusBottomStart="4dp"
+                        app:boxCornerRadiusTopEnd="4dp"
+                        app:boxCornerRadiusTopStart="4dp"
+                        app:boxStrokeColor="@color/activeBlue"
+                        app:hintTextColor="@color/light_grey_color"
+                        app:layout_constraintLeft_toLeftOf="@id/user_gender_title"
+                        app:layout_constraintRight_toRightOf="@id/dob_ed_layout"
+                        app:layout_constraintTop_toBottomOf="@id/user_gender_title">
+
+                        <AutoCompleteTextView
+                            android:id="@+id/user_gender_ed"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:inputType="none"
+                            android:text="Select Gender" />
+
+                    </com.google.android.material.textfield.TextInputLayout>
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/update_info_btn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="50dp"
+                        android:layout_marginEnd="20dp"
+                        android:elevation="5dp"
+                        android:fontFamily="@font/montserrat"
+                        android:paddingTop="13dp"
+                        android:paddingBottom="13dp"
+                        android:text="Update Details"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
+                        android:textStyle="bold"
+                        app:backgroundTint="@color/gradientCarouselIndicatorStartColor"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/user_gender_ed_layout"
+                        app:rippleColor="#6cc1d7"
+                        app:strokeColor="@color/gradientCarouselIndicatorStartColor"
+                        app:strokeWidth="1dp" />
+
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/pb_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center"
+                        android:indeterminate="true"
+                        android:visibility="visible"
+                        app:indicatorColor="@color/darkBlue"
+                        app:layout_constraintBottom_toBottomOf="@id/update_info_btn"
+                        app:layout_constraintLeft_toLeftOf="@id/update_info_btn"
+                        app:layout_constraintRight_toRightOf="@id/update_info_btn"
+                        app:layout_constraintTop_toTopOf="@id/update_info_btn" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.core.widget.NestedScrollView>
+
+
+            <ProgressBar
+                android:id="@+id/progress_for_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/loading_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="90dp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
