--- a/app/src/main/res/navigation/free_parenting_navgraph.xml
+++ b/app/src/main/res/navigation/free_parenting_navgraph.xml
@@ -84,5 +84,14 @@
         android:id="@+id/childProfileFragment"
         android:name="com.uptodd.uptoddapp.ui.freeparenting.profile.childprofile.ChildProfileFragment"
         android:label="child_profile_fragment_layout"
-        tools:layout="@layout/child_profile_fragment_layout" />
+        tools:layout="@layout/child_profile_fragment_layout" >
+        <action
+            android:id="@+id/action_childProfileFragment_to_editProfileFragment"
+            app:destination="@id/editProfileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="com.uptodd.uptoddapp.ui.freeparenting.profile.childprofile.EditProfileFragment"
+        android:label="free_parenting_baby_edit_profile_fragment"
+        tools:layout="@layout/free_parenting_baby_edit_profile_fragment" />
 </navigation>
