--- a/app/src/main/res/layout/daily_book_layout.xml
+++ b/app/src/main/res/layout/daily_book_layout.xml
@@ -4,90 +4,103 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.uptodd.uptoddapp.ui.freeparenting.daily_book.DailyBookFragment">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawer_layout_free"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
-            <include
-                android:id="@+id/toolbar_nav"
-                layout="@layout/free_parenting_toolbar_header"
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|enterAlways" />
+                android:layout_height="match_parent">
 
-            <androidx.core.widget.NestedScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <LinearLayout
-                    android:id="@+id/item_container"
+                <include
+                    android:id="@+id/toolbar_nav"
+                    layout="@layout/free_parenting_toolbar_header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    app:layout_scrollFlags="scroll|enterAlways" />
 
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabs"
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+                    <LinearLayout
+                        android:id="@+id/item_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="3dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="3dp"
-                        app:tabIndicator="@drawable/tab_bg_selected"
-                        app:tabIndicatorColor="#1AA6C5"
-                        app:tabIndicatorFullWidth="true"
-                        app:tabIndicatorHeight="48dp"
-                        app:tabMode="scrollable"
-                        app:tabRippleColor="#c2e7ff"
-                        app:tabSelectedTextColor="@color/white"
-                        app:tabTextAppearance="@style/customTabLayout"
-                        app:tabTextColor="@color/darkBlue" />
+                        android:orientation="vertical">
+
+                        <com.google.android.material.tabs.TabLayout
+                            android:id="@+id/tabs"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="3dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="3dp"
+                            app:tabIndicator="@drawable/tab_bg_selected"
+                            app:tabIndicatorColor="#1AA6C5"
+                            app:tabIndicatorFullWidth="true"
+                            app:tabIndicatorHeight="48dp"
+                            app:tabMode="scrollable"
+                            app:tabRippleColor="#c2e7ff"
+                            app:tabSelectedTextColor="@color/white"
+                            app:tabTextAppearance="@style/customTabLayout"
+                            app:tabTextColor="@color/darkBlue" />
 
 
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/viewPager"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-            </androidx.core.widget.NestedScrollView>
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/viewPager"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                </androidx.core.widget.NestedScrollView>
 
 
-            <ProgressBar
-                android:id="@+id/progress_for_tab_content"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="start"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="70dp"
-                android:visibility="gone" />
+                <ProgressBar
+                    android:id="@+id/progress_for_tab_content"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="start"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="70dp"
+                    android:visibility="gone" />
 
 
-            <ProgressBar
-                android:id="@+id/progress_for_video_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="gone" />
+                <ProgressBar
+                    android:id="@+id/progress_for_video_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone" />
 
-            <TextView
-                android:id="@+id/loading_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="90dp"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:visibility="gone" />
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/loading_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="90dp"
+                    android:fontFamily="@font/montserrat"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_drawer"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/header_for_free_parenting_fragment"
+            app:menu="@menu/free_parenting_menu" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
